1.21.3 is one of the worst updates ever